--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^2.30.0",
     "dotenv": "^16.4.1",
     "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "firebase": "^10.12.3",
     "jquery": "^3.7.1",
     "js-cookie": "^3.0.5",
